--- a/ltmap4esri/samples/styler/styler.html
+++ b/ltmap4esri/samples/styler/styler.html
@@ -873,7 +873,7 @@
           left: 0
         }, 
         uiPadding: { 
-          components:["zoom", "attribution", "home"],
+          components:["zoom", "attribution", "search","home"],
           padding: {
             top: 15,
             right: 15,
